--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,8 @@
     xmlns:util="clr-namespace:WpfExplorer.Controls.Util"
     mc:Ignorable="d"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-    Title="MainWindow" Height="450" Width="800">
+    Title="MainWindow" Height="450" Width="800"
+    UseLayoutRounding="True">
     
     <Grid>
         <Grid.ColumnDefinitions>
@@ -19,7 +20,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="45"></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition Height="10"></RowDefinition>
+            <RowDefinition Height="5"></RowDefinition>
         </Grid.RowDefinitions>
 
         <TextBox 
@@ -92,5 +93,9 @@
         <ContentControl 
             Content="{Binding CurrentViewModel}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
         </ContentControl>
+
+        <Image x:Name="img"
+            Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+        </Image>
     </Grid>
 </Window>
