--- a/Resources/Styles/ButtonStyle.xaml
+++ b/Resources/Styles/ButtonStyle.xaml
@@ -7,26 +7,42 @@
     <Style
         x:Key="ImageButton"
         TargetType="{x:Type Button}">
-        <Setter
-            Property="HorizontalContentAlignment"
-            Value="Stretch" />
-        <Setter
-            Property="ContentTemplate">
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background">
             <Setter.Value>
-                <DataTemplate>
+                <SolidColorBrush Color="Black" Opacity="0"/>
+            </Setter.Value>
+        </Setter>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
                     <Grid>
                         <Image
                             Source="{Binding Path=(util:ButtonImage.Image),
                             RelativeSource={RelativeSource FindAncestor,
                             AncestorType={x:Type Button}}}"
-                            HorizontalAlignment="Left"/>
+                            HorizontalAlignment="Left" Width="15" Height="15"/>
                         <TextBlock
                             Text="{TemplateBinding Content}"
                             HorizontalAlignment="Center" />
                     </Grid>
-                </DataTemplate>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsDefaulted" Value="true">
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+
     </Style>
 
 
