--- a/Views/ItemsView.xaml
+++ b/Views/ItemsView.xaml
@@ -12,8 +12,7 @@
 
         <ListBox 
             Name="itemsList" ItemsSource="{Binding Browser.Items}" 
-            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-            ScrollViewer.VerticalScrollBarVisibility="Disabled">
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
                     <i:InvokeCommandAction 
@@ -28,7 +27,7 @@
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <WrapPanel Orientation="Vertical">
+                    <WrapPanel Orientation="Vertical" ScrollViewer.HorizontalScrollBarVisibility="Auto">
                         <StackPanel Orientation="Vertical" Width="60" Height="70">
                             <Image 
                                 Source="{Binding Path=Icon}" Width="40" Height="40"
