--- a/Views/TableView.xaml
+++ b/Views/TableView.xaml
@@ -18,6 +18,19 @@
                         CommandParameter="{Binding ElementName=itemsList, Path=SelectedItem}"/>
                 </i:EventTrigger>
             </i:Interaction.Triggers>
+
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="ToolTip">
+                        <Setter.Value>
+                            <UniformGrid Columns="1">
+                                <TextBlock Text="{Binding FullName}"/>
+                            </UniformGrid>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Name}">Имя</GridViewColumn>
