Added logger to debug and log stuff

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,8 @@
     mc:Ignorable="d"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     Title="Explorer" Height="450" Width="700"
-    UseLayoutRounding="True">
+    UseLayoutRounding="True"
+    Closing="Window_Closing">
     
     <Grid>
         <Grid.ColumnDefinitions>
